--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="../public/open-iconic/font/css/open-iconic-bootstrap.css" rel="stylesheet">
+    <link href="../public/open-iconic/font/css/open-iconic-foundation.css" rel="stylesheet">
     <title>Admin</title>
 </head>
     <body>
